# learning_methodologies

./: .gitignore  COURSE_DESIGN.md  Makefile  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: bibliography.md  glossary.md
modules/00-orientation/: README.md
modules/00-orientation/exercises/: m00_observations.py
modules/00-orientation/project/: pipeline.py
modules/00-orientation/solutions/: m00_observations.py  reflections.md
modules/00-orientation/tests/: conftest.py  test_m00.py
modules/01-version-control/: README.md
modules/01-version-control/exercises/: m01_git_concepts.py  make_kata.py  review_me.diff
modules/01-version-control/solutions/: m01_git_concepts.py  m01_solve_kata.py  reflections.md
modules/01-version-control/tests/: conftest.py  test_m01.py
modules/02-code-design/: README.md
modules/02-code-design/exercises/: m02_refactor.py  m02_tidy.py
modules/02-code-design/solutions/: m02_refactor.py  m02_tidy.py  reflections.md
modules/02-code-design/tests/: conftest.py  test_m02.py
modules/03-testing/: README.md
modules/03-testing/exercises/: m03_hunt.py  m03_integration.py  mutants.py
modules/03-testing/solutions/: m03_hunt.py  m03_integration.py  reflections.md
modules/04-functional-data-engineering/: README.md
modules/05-data-quality/: README.md
modules/06-ci-cd/: README.md
modules/07-orchestration-operations/: README.md  runbook_template.md
modules/08-capstone/: README.md  rubric.md
tools/datagen/: __init__.py  __main__.py  generator.py
tools/tests/: test_datagen.py
(+46 files in other folders)
